Styles - Prevent MUI Data Grid scrollbars from displaying over Header and Sidebar

--- a/client-next/src/app/_styles/Sidebar.module.css
+++ b/client-next/src/app/_styles/Sidebar.module.css
@@ -3,7 +3,7 @@
     height: calc(100vh - var(--topbar-height));
     overflow: scroll;
     position: fixed;
-    z-index: 2;
+    z-index: 7;
     background: rgb(228, 255, 238);
     transition: transform 0.15s ease-in-out;
 }
