--- a/client-next/src/app/_styles/Topbar.module.css
+++ b/client-next/src/app/_styles/Topbar.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 7;
     display: flex;
     justify-content: space-between;
     align-items: center;
